--- a/.github/workflows/5.3-process-audio-wavs.yml
+++ b/.github/workflows/5.3-process-audio-wavs.yml
@@ -240,7 +240,12 @@ jobs:
           if [ "${{ env.AUDIO_SOURCE }}" == "mp3_zip" ]; then
             echo "UPLOAD_FILES=audio_adjusted.mp3 transcript.srt" >> $GITHUB_ENV
           elif [ "${{ env.AUDIO_SOURCE }}" == "mp3_batch" ] || [ "${{ env.AUDIO_SOURCE }}" == "wav" ]; then
-            FILE_LIST=$(ls transcript-*.srt input/*.{mp3,wav} | tr '\n' ' ')
+            # Chỉ lấy các file transcript-*.srt
+            FILE_LIST=$(ls transcript-*.srt 2>/dev/null | tr '\n' ' ')
+            if [ -z "$FILE_LIST" ]; then
+              echo "❌ Không tìm thấy file .srt nào để upload."
+              exit 1
+            fi
             echo "File sẽ được upload: $FILE_LIST"
             echo "UPLOAD_FILES=$FILE_LIST" >> $GITHUB_ENV
           else
