--- a/.github/workflows/5.3-process-audio-wavs.yml
+++ b/.github/workflows/5.3-process-audio-wavs.yml
@@ -142,7 +142,7 @@ jobs:
           fi
 
       - name: ✍️ Tạo phụ đề SRT (từ file MP3 đã xử lý)
-        if: env.AUDIO_SOURCE == 'mp3'
+        if: env.AUDIO_SOURCE == 'mp3_zip'
         run: |
           whisper adjusted/audio_adjusted.mp3 \
             --model "$WHISPER_MODEL" \
