--- a/.github/workflows/5.3-process-audio-wavs.yml
+++ b/.github/workflows/5.3-process-audio-wavs.yml
@@ -129,7 +129,7 @@ jobs:
           ffmpeg -f concat -safe 0 -i merged/list.txt -c copy merged/merged.mp3
 
       - name: 🐢 Điều chỉnh tốc độ & âm lượng audio
-        if: env.AUDIO_SOURCE == 'mp3'
+        if: env.AUDIO_SOURCE == 'mp3_zip'
         run: |
           mkdir -p adjusted
           BITRATE=$(ffprobe -v error -select_streams a:0 -show_entries stream=bit_rate -of csv=p=0 merged/merged.mp3)
