refactor and add translate-srt-multilanguage.yml

--- a/.github/workflows/translate-srt.yml
+++ b/.github/workflows/translate-srt.yml
@@ -11,7 +11,7 @@ on:
         options:
           - ose
           - mep
-          - dde
+          - cdp
       srt_path:
         description: 'Đường dẫn tới file .srt trong repo (ví dụ subtitles/episode1.zh.srt)'
         required: true
