update translate-srt-multilanguage.yml gửi thông báo noti tele.

--- a/.github/workflows/translate-srt-multilanguage.yml
+++ b/.github/workflows/translate-srt-multilanguage.yml
@@ -179,7 +179,7 @@ jobs:
   notify:
     needs: translate-and-upload # Phụ thuộc vào job trên
     if: always() # Luôn chạy để gửi thông báo
-    uses: ./.github/workflows/notify-telegram.yml@main # Gọi reusable workflow
+    uses: ./.github/workflows/notify-telegram.yml # Gọi reusable workflow
     with:
       # Truyền message đã được tạo ở job trước vào
       message: ${{ needs.translate-and-upload.outputs.summary_message }}
