--- a/.github/workflows/generate_tts.yml
+++ b/.github/workflows/generate_tts.yml
@@ -17,19 +17,19 @@ on:
         required: true
         default: "generated_audio.wav"
       text_to_speak:
-        description: "Nội dung văn bản cần chuyển thành giọng nói (hỗ trợ nhiều dòng)"
-        required: true
-        type: string # 'string' sẽ hiển thị một ô nhập text lớn hơn
-        default: |
-          Speaker 1: Hello! We're excited to show you our native speech capabilities.
-          Speaker 2: Where you can direct a voice, create realistic dialog, and so much more.
-      speaker_mappings:
-        description: "Ánh xạ Người nói với Giọng nói (mỗi dòng một mapping)"
+        description: "Nội dung văn bản cần chuyển thành giọng nói (hỗ
+ trợ nhiều dòng)"
         required: true
         type: string
         default: |
-          Speaker 1:Zephyr
-          Speaker 2:Puck
+          Speaker 1: Hello! We're excited to show you our native speech capabilities.
+          Speaker 2: Where you can direct a voice, create realistic dialog, and so much more.
+      # ----- THAY ĐỔI 1: Cập nhật description và default value -----
+      speaker_mappings:
+        description: "Ánh xạ Người nói với Giọng nói, cách nhau bằng dấu phẩy"
+        required: true
+        type: string
+        default: "Speaker 1:Zephyr, Speaker 2:Puck"
       upload_folder_url:
         description: "URL của thư mục Google Drive để tải file âm thanh lên"
         required: false
@@ -40,15 +40,12 @@ jobs:
     environment:
       name: ${{ inputs.env }}
     env:
-      # Secrets cho Google Drive, Gemini và Telegram
       GG_REFRESH_TOKEN: ${{ secrets.GG_REFRESH_TOKEN }}
       YT_CLIENT_ID:     ${{ secrets.YT_CLIENT_ID }}
       YT_CLIENT_SECRET: ${{ secrets.YT_CLIENT_SECRET }}
       GEMINI_API_KEY:   ${{ secrets.GEMINI_API_KEY }}
       TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
       TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-      
-      # Biến từ inputs để dùng trong các steps
       UPLOAD_FOLDER_URL: ${{ inputs.upload_folder_url }}
 
     steps:
@@ -74,26 +71,33 @@ jobs:
           
           OUTPUT_PATH="output/${{ inputs.output_filename }}"
           
-          # Xây dựng các tham số --speaker từ input nhiều dòng
+          # ----- THAY ĐỔI 2: Logic mới để xử lý chuỗi phân tách bằng dấu phẩy -----
           SPEAKER_ARGS=""
-          while IFS= read -r line; do
-            # Bỏ qua các dòng trống
-            if [ -n "$line" ]; then
-              SPEAKER_ARGS+=" --speaker \"$line\""
-            fi
-          done <<< "${{ inputs.speaker_mappings }}"
+          
+          # Thay thế dấu phẩy bằng ký tự dòng mới để có thể lặp qua từng phần tử
+          MAPPINGS_AS_LINES=$(echo "${{ inputs.speaker_mappings }}" | tr ',' '\n')
 
+          while IFS= read -r mapping; do
+            # Bỏ qua các phần tử rỗng (ví dụ: khi có dấu phẩy kép ,,)
+            # và xargs để xóa khoảng trắng thừa ở đầu và cuối
+            trimmed_mapping=$(echo "$mapping" | xargs)
+            if [ -n "$trimmed_mapping" ]; then
+              SPEAKER_ARGS+=" --speaker \"$trimmed_mapping\""
+            fi
+          done <<< "$MAPPINGS_AS_LINES"
+          
           # In ra lệnh sẽ chạy để debug
           echo "Lệnh sẽ được thực thi:"
           echo "python scripts/create_tts.py --output \"$OUTPUT_PATH\" --text \"${{ inputs.text_to_speak }}\" $SPEAKER_ARGS"
 
           # Chạy script Python
+          # Lưu ý: $SPEAKER_ARGS không cần đặt trong dấu ngoặc kép ở đây
+          # để shell có thể phân tách nó thành nhiều đối số.
           python scripts/create_tts.py \
             --output "$OUTPUT_PATH" \
             --text "${{ inputs.text_to_speak }}" \
             $SPEAKER_ARGS
 
-          # Kiểm tra xem file đã được tạo thành công chưa
           if [ ! -f "$OUTPUT_PATH" ]; then
             echo "::error::Tạo file âm thanh thất bại. File không tồn tại."
             exit 1
@@ -102,9 +106,11 @@ jobs:
           echo "✅ Đã tạo file âm thanh thành công: $OUTPUT_PATH"
           echo "output_path=$OUTPUT_PATH" >> $GITHUB_OUTPUT
 
+      # ... Các steps còn lại giữ nguyên ...
+
       - name: 📝 Generate summary message
         id: generate_summary
-        if: always() # Luôn chạy step này
+        if: always()
         run: |
           RUN_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
           SUMMARY_MESSAGE=""
@@ -125,8 +131,6 @@ jobs:
         if: success() && inputs.upload_folder_url != ''
         run: |
           echo "Đang tải file ${{ steps.generate_tts.outputs.output_path }} lên Google Drive..."
-          # Giả định bạn có script `upload_results_to_drive.py` có thể xử lý việc này
-          # Bạn cần chỉnh sửa script này để nhận một file thay vì nhiều file
           export UPLOAD_FILES="${{ steps.generate_tts.outputs.output_path }}"
           python scripts/upload_results_to_drive.py
 
@@ -139,6 +143,5 @@ jobs:
       - name: "📩 Notify via Telegram"
         if: always()
         run: |
-          # Giả định bạn có script `send_telegram_message.js`
           export MESSAGE="${{ steps.generate_summary.outputs.summary_message }}"
           node scripts/send_telegram_message.js
